[package]
name = "event"
version = "0.1.0"
authors = ["Peter <mezeipetister@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
storaget = "0.8.0"
dirs = "*"
termion = "*"